# crypto-sentinel

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  homepage.html  package-lock.json  pyproject.toml  run.bat  run.ps1  run_ai.py  test_kimi25.py  testchart.html  tmp_test_extract.py
app/: asr_runtime.py  backfill_service.py  cli.py  config.py  logging.py  main.py  runtime_control.py  test_grounding.py
docker/: Dockerfile  docker-compose.yml
docs/: ai_analysis_logic_and_optimization_report.md  architecture_report.md
scripts/: backfill.py  fix_overview.py  fix_overview_regex.py  init_db.py  migrate_vta.py  migrate_youtube_analysis_runtime.py  reanalyze_videos.py  start.bat  start.ps1  start.sh  test_binance_account.py
tests/: test_account_monitor_retry.py  test_account_monitor_risk.py  test_admin_auth.py  test_ai_analysis_failures_repo_api.py  test_ai_analyst.py  test_ai_manual_preflight.py  test_ai_prompts_market.py  test_ai_signals_api_summary.py  test_ai_stream_cancel.py  test_ai_stream_error_api.py  test_analysis_flow.py  test_anomaly_analyst.py  test_anomaly_budget_utc.py  test_anomaly_mtf_confirm.py  test_anomaly_score_breakdown.py  test_anomaly_state_machine_keys.py  test_anomaly_tick_flash.py  test_asr_runtime.py  test_binance_signed.py  test_cli.py  test_db_strict_mode.py  test_docs_and_compose.py  test_feature_incremental.py  test_health_api.py  test_jobs_filter_v2.py  test_llm_abstraction.py  test_llm_config_api_hot_apply.py  test_llm_hot_reload.py  test_llm_metrics.py  test_logging.py  test_market_context_builder.py  (+26 more)
(+141 files in other folders)
