[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-sentinel"
version = "0.1.0"
description = "Crypto Sentinel V0 market radar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "openai>=1.40.0",
  "youtube-transcript-api>=0.6.0",
  "yt-dlp>=2024.0.0",
  "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
sentinel = "app.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
